[package]
name = "actix-unknown-issuer-minimal"
version = "0.1.0"
authors = ["mbuscemi <matthew.buscemi@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
deadpool-postgres = "0.5.6"
tokio-postgres = "0.5.5"
rustls = "0.18.1"
rustls-native-certs = "0.4.0"
tokio-postgres-rustls = "0.5.0"
webpki-roots = "0.21.0"
serde = "1.0.124"
dotenv = "0.15.0"
config = "0.10.1"
log = "0.4.14"
