[package]
name = "actix-unknown-issuer-minimal"
version = "0.1.0"
authors = ["mbuscemi <matthew.buscemi@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.4"
actix-rt = "2.1.0"
actix-service = "2.0.0-beta.5"
deadpool-postgres = "0.7.0"
tokio-postgres = "0.7.0"
rustls = "0.19.0"
rustls-native-certs = "0.5.0"
tokio-postgres-rustls = "0.8.0"
webpki-roots = "0.21.0"
serde = "1.0.124"
dotenv = "0.15.0"
config = "0.10.1"
log = "0.4.14"
