[package]
name = "actix-unknown-issuer-minimal"
version = "0.1.0"
authors = ["mbuscemi <matthew.buscemi@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
sqlx = { version = "0.5.1", features = [ "runtime-async-std-rustls", "postgres" ] }
async-std = { version = "1.5.0", features = [ "attributes" ] }
serde = "1.0.124"
config = "0.10.1"
dotenv = "0.15.0"
